--- a/package.json
+++ b/package.json
@@ -1,65 +1,37 @@
 {
-  "name": "senubot",
+  "name": "opibot",
   "version": "1.0.0",
-  "description": "Wielofunkcyjny bot na serwer Discord",
-  "main": "bot.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node bot.js",
-    "prestart": "cp index.js node_modules/weather-js/index.js"
-  },
+  "description": "Personal discord bot",
+  "main": "dist/index.js",
   "engines": {
-    "node": "16.13.2"
+    "node": ">=18.6.0"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node --experimental-specifier-resolution=node dist/index.js",
+    "dev": "tsc-watch --onSuccess \"npm run start\""
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tomo92s/senubot/senubot.git"
+    "url": "git+https://github.com/Opisek/opibot.git"
   },
-  "author": "TomoS",
+  "author": "Kacper Darowski",
+  "bugs": {
+    "url": "https://github.com/Opisek/opibot/issues"
+  },
+  "homepage": "https://github.com/Opisek/opibot#readme",
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
+    "eslint": "^8.38.0",
+    "eslint-plugin-json": "^3.1.0",
+    "tsc-watch": "^6.0.0",
+    "typescript": "^5.0.4"
+  },
   "dependencies": {
-    "@discordjs/opus": "^0.8.0",
-    "@mapbox/node-pre-gyp": "^1.0.10",
-    "@twurple/api": "^5.2.5",
-    "array-sort": "^1.0.0",
-    "better-sqlite-pool": "^0.3.1",
-    "better-sqlite3": "^7.5.3",
-    "bindings": "^1.3.0",
-    "braille": "^1.1.0",
-    "canvas": "^2.10.1",
-    "cpu-stat": "^2.0.1",
-    "discord.js": "^14.5.0",
-    "e621": "^1.0.9",
-    "enmap": "^5.9.2",
-    "ffmpeg": "0.0.4",
-    "file-system": "^1.2.2",
-    "fs": "^0.0.1-security",
-    "giphy-api": "^2.0.2",
-    "jquery": "^3.6.1",
-    "libnpmdiff": "^2.0.4",
-    "lzma-native": "^4.0.3",
-    "m3u8stream": "^0.7.1",
-    "mkdirp": "^1.0.3",
-    "moment": "^2.29.3",
-    "moment-duration-format": "^2.2.2",
-    "moment-timezone": "^0.5.37",
-    "ms": "^2.1.3",
-    "node-fs": "^0.1.7",
-    "node-gyp": "^4.0.0",
-    "node-gyp-build": "^3.7.0",
-    "node-superfetch": "^0.1.11",
-    "novelcovid": "^3.0.2",
-    "npm": "^8.19.2",
-    "os": "^0.1.2",
-    "os-utils": "0.0.14",
-    "parse-time": "^0.1.4",
-    "pm2": "^5.2.0",
-    "pornpics": "^1.1.0",
-    "simple-youtube-api": "^5.1.1",
-    "snoowrap": "^1.23.0",
-    "tar": "^4.4.19",
-    "weather-js": "^2.0.0",
-    "yamdbf": "^3.0.1",
-    "yt-search": "^2.10.3",
-    "ytdl-core": "^4.11.2"
+    "discord.js": "^14.9.0",
+    "dotenv": "^16.0.3"
   }
 }
