--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Personal discord bot",
   "main": "dist/index.js",
   "engines": {
-    "node": ">=18.6.0"
+    "node": ">=18.6.0 <19.0.0"
   },
   "scripts": {
     "build": "tsc",
